# Orbbec-Gemini-336L-Viewer

./: .gitignore  README.md  camera.py  grasp.py  justfile  main.py  pyproject.toml  refine_ply.py  segmentation.py  test_ply.py  vis_grasp_pcd.py
Log/: OrbbecSDK.log.txt
output/: color_20260310_173450.avi  depth_20260310_173450.avi  depth_raw_20260310_173448.npy  test_depth_raw_20260310_173138.npy
